k8s-3party-apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-fanout
  namespace: trash-talker
spec:
  ingressClassName: nginx
  rules:
    - host: "*.trashtalker.internal"
      http:
        paths:
          - pathType: Prefix
            path: /container
            backend:
              service:
                name: containers-service
                port:
                  number: 80
          - pathType: Prefix
            path: /routes
            backend:
              service:
                name: routes-service
                port:
                  number: 80
          - pathType: Prefix
            path: /accounts
            backend:
              service:
                name: accounts-service
                port:
                  number: 80
    - host: "web.trashtalker.internal"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: web-app
                port:
                  number: 3000
